<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Super Soundboard</string>
	<string name="action_settings">Settings</string>
	<string name="title_activity_edit_sound">Edit Sound</string>
	<string name="browse_button_text">…</string>
	<string name="record_button_text">touch to record</string>
	<string name="edit_switch_text">Edit</string>
	<string name="uri_text_view_text">File</string>
	<string name="name_text_view_text">Name</string>
	<string name="save_button_text">Ok</string>

</resources>
